# HoloLens2-ROS2-Interactions

./: .gitmodules  README.md
hl2-ros2/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
hl2-ros2/install/hl2_ros2/lib/hl2_ros2/: simple_remote_nav
hl2-ros2/install/hl2_ros2/share/hl2_ros2/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
hl2-ros2/log/: latest_build  latest_list
hl2-ros2/src/hl2_ros2/: README.md  package.xml  setup.cfg  setup.py
hl2-ros2/src/hl2_ros2/hl2_ros2/: simple_remote_nav.py
