<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hl2_ros2</name>
  <version>0.0.0</version>
  <description>Controls your ROS2 Robot using the HoloLens 2 and other devices.</description>
  <maintainer email="srazi@uef.fi">Septian Razi</maintainer>
  <license>MIT Liscense</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <depend>rclpy</depend>
  <depend>irobot_create_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
